[[bin]]
name = "keyboard"
path = "src/main.rs"
test = false
doctest = false
bench = false

[package]
name = "keyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
panic-semihosting = "0.6.0"
